--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "^2.21.0",
+    "@sidebase/nuxt-auth": "0.10.0",
     "drizzle-kit": "^0.30.4",
+    "next-auth": "~4.21.1",
     "nuxt": "^3.15.4",
     "vue": "latest"
   },
