--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
+    "@tailwindcss/vite": "^4.0.8",
     "drizzle-orm": "^0.39.3",
+    "tailwindcss": "^4.0.8",
     "zod": "^3.24.2"
   }
 }
