--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@libsql/client": "^0.14.0",
     "@tailwindcss/vite": "^4.0.8",
     "drizzle-orm": "^0.39.3",
+    "reka-ui": "^2.0.0",
     "tailwindcss": "^4.0.8",
     "zod": "^3.24.2"
   }
