--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/icon": "^1.10.3",
     "@nuxt/ui": "^2.21.0",
     "@sidebase/nuxt-auth": "0.10.0",
     "drizzle-kit": "^0.30.4",
