--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/icon": "^1.15.0",
     "@nuxt/ui": "^2.22.3",
     "@sidebase/nuxt-auth": "0.10.0",
+    "@types/d3": "^7.4.3",
     "drizzle-kit": "^0.30.6",
     "next-auth": "~4.21.1",
     "nuxt": "^3.20.2",
