Add data git ignore and conversion packages

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "build": "nuxt build",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
+    "export-drinks": "tsx server/utils/export-drinks.ts",
+    "export-paid": "tsx server/utils/export-paid.ts",
+    "export-rounds": "tsx server/utils/export-rounds.ts",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -16,7 +19,7 @@
     "@nuxt/icon": "^1.15.0",
     "@nuxt/ui": "^2.22.3",
     "@sidebase/nuxt-auth": "0.10.0",
-    "@types/d3": "^7.4.3",
+    "date-fns": "^4.1.0",
     "drizzle-kit": "^0.30.6",
     "next-auth": "~4.21.1",
     "nuxt": "^3.20.2",
@@ -24,6 +27,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
+    "@psych/sheet": "npm:@jsr/psych__sheet@^1.0.8",
     "@tailwindcss/vite": "^4.1.18",
     "d3": "^7.9.0",
     "drizzle-orm": "^0.39.3",
